--- a/hw4/hw4.ipynb
+++ b/hw4/hw4.ipynb
@@ -25,8 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Запишем расширенную матрицу системы:\n",
-    "\n",
     "$$\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
     "1 & 1 & -1 & -2 \\\\ \n",
@@ -40,9 +38,6 @@
     "\\end{matrix}\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "Путем элементарных преобразований постараемся привести матрицу к ступенчатому виду.\n",
-    "\n",
-    "Вычтем из второй строки первую, умноженную на 2:\n",
     "\n",
     "$$\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
@@ -57,7 +52,6 @@
     "\\end{matrix}\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "Вычтем из третьей строки первую:\n",
     "\n",
     "$$\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
@@ -77,14 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В полученном ступенчатом виде мы имеем ступеньки из двух чисел. В таком случае система имеет _бесконечное количество решений._"
+    "Cтупеньки из двух чисел, \n",
+    "система имеет бесконечное количество решений."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Оставшаяся матрица соответствует системе:  \n",
     "$$\\begin{cases}\n",
     "x_{1}+x_{2}-x_{3}-2x_{4}=0, \\\\\n",
     "-x_{2}+x_{3}+5x_{4}=-2, \\\\\n",
@@ -96,14 +90,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Неизвестные, «сидящие» на ступеньках матрицы, принято назывть _базисными_, и их нужно выразить через _свободные_ неизвестные. В данном случае можно рассматривать в качестве _свободного_ параметра $x_{3}=c$. Тогда, выражая остальные переменные через $c$, получим:\n",
-    "\n",
     "$$x_{4}=c$$\n",
     "$$-2x_{3}+3c=4 \\; \\Leftrightarrow \\; x_{3}=(3c-4)/2$$\n",
     "$$-x_{2} + (3c-4)/2 + 5c=-2 \\; \\Leftrightarrow \\; x_{2}=-13c/2$$\n",
     "$$x_{1} - 13c/2 - (3c-4)/2 - 2c=0 \\; \\Leftrightarrow \\; x_{1}=10c-2.$$\n",
     "\n",
-    "Таковым будет _общее решение системы_. Подставляя произвольные числа вместо $c$, мы получим _частное решение_. Например, при $c=0$:\n",
+    "Таковым будет _общее решение системы_. \n",
+    "\n",
+    "Одно из частных решений, \n",
+    "$c=0$:\n",
     "\n",
     "$$x_{1}=0,$$\n",
     "$$x_{2}=-2,$$\n",
@@ -144,14 +139,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Запишем матрицу коэффициентов А\n",
+    "Матрица коэффициентов А\n",
     "$${A}=\\begin{pmatrix}\n",
     "3 & -1 & 1 \\\\ \n",
     "2 & -5 & -3\\\\ \n",
     "1 & 1 & -1\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "И расширенную матрицу:  \n",
+    "Расширенная матрица:  \n",
     "$$\\tilde{A}=\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
     "3 & -1 & 1 \\\\ \n",
@@ -164,8 +159,8 @@
     "0\n",
     "\\end{matrix}\n",
     "\\end{pmatrix}.$$  \n",
-    "Ранг матрицы коэффициентов равен 3 и ранг расширенной матрицы равен трем, т.к. нет линейно зависимых строк.   \n",
-    "$rankA=rank \\tilde A=n$ решение единественное."
+    "Ранг A равен 3 и ранг расширенной матрицы равен 3, т.к. нет линейно зависимых строк.   \n",
+    "$rankA=rank \\tilde A=n$ решение одно."
    ]
   },
   {
@@ -183,14 +178,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Запишем матрицу коэффициентов А\n",
+    "Матрица коэффициентов А\n",
     "$${A}=\\begin{pmatrix}\n",
     "2 & -4 & 6 \\\\ \n",
     "1 & -2 & 3\\\\ \n",
     "3 & -6 & 9\n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "И расширенную матрицу:  \n",
+    "Расширенная матрица:  \n",
     "$$\\tilde{A}=\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
     "2 & -4 & 6 \\\\ \n",
@@ -203,8 +198,9 @@
     "5\n",
     "\\end{matrix}\n",
     "\\end{pmatrix}.$$  \n",
-    "Ранг матрицы коэффициентов равен 1, т.к. первая строка это вторая умноженная на 2. А третья строка это вторая строка умноженная на 3.  \n",
-    "Ранг расширенной матрицы равен трем, т.к. нет линейно зависимых строк.   \n",
+    "Ранг матрицы коэффициентов равен 1, т.к. первая строка это вторая умноженная на 2. \n",
+    "А третья строка это вторая строка умноженная на 3.  \n",
+    "Ранг расширенной матрицы равен 3, т.к. нет линейно зависимых строк.   \n",
     "$rankA<rank \\tilde A$, то система несовместна."
    ]
   },
@@ -222,13 +218,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Запишем матрицу коэффициентов А\n",
+    "Матрица коэффициентов А\n",
     "$${A}=\\begin{pmatrix}\n",
     "1 & 2 & 5 \\\\ \n",
     "3 & 1 & -8\\\\ \n",
     "\\end{pmatrix}.$$\n",
     "\n",
-    "И расширенную матрицу:  \n",
+    "Расширенная матрица:  \n",
     "$$\\tilde{A}=\\begin{pmatrix}\n",
     "\\left.\\begin{matrix}\n",
     "1 & 2 & 5 \\\\ \n",
@@ -275,65 +271,6 @@
     "Т.к. в матрице коэффициентов и в расширенной матрице нет линейно зависимых строк.\n",
     "Количество неизвестных равно 4.  \n",
     "$rankA=rank \\tilde A=n$ решение единественное."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Проверим на питоне"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[ 1  3 -2  4]\n",
-      " [ 0  5  0  1]\n",
-      " [ 0  0  3  0]\n",
-      " [ 0  0  0  1]]\n",
-      "Ранг матрицы: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "A_3 = np.array([[1, 3, -2, 4], [0, 5, 0, 1], [0, 0, 3, 0], [0, 0, 0, 1]])\n",
-    "r_3 = np.linalg.matrix_rank(A_3)\n",
-    "print(f'Матрица:\\n{A_3}')\n",
-    "print(f'Ранг матрицы: {r_3}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[ 1  3 -2  4  3]\n",
-      " [ 0  5  0  1  2]\n",
-      " [ 0  0  3  0  4]\n",
-      " [ 0  0  0  1  1]]\n",
-      "Ранг матрицы: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "A_3_extend = np.array([[1, 3, -2, 4, 3], [0, 5, 0, 1, 2], [0, 0, 3, 0, 4], [0, 0, 0, 1, 1]])\n",
-    "r_3_extend = np.linalg.matrix_rank(A_3)\n",
-    "print(f'Матрица:\\n{A_3_extend}')\n",
-    "print(f'Ранг матрицы: {r_3_extend}')"
    ]
   },
   {
@@ -534,110 +471,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Прозведем проверку с помощью python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[ 2 -1  5]\n",
-      " [ 1  1 -3]\n",
-      " [ 2  4  1]]\n",
-      "Определитель:\n",
-      "43\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.array([[2, -1, 5], [1, 1, -3], [2, 4, 1]])\n",
-    "print(f'Матрица:\\n{a}')\n",
-    "print(f'Определитель:\\n{np.linalg.det(a):.0f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[10 -1  5]\n",
-      " [-2  1 -3]\n",
-      " [ 1  4  1]]\n",
-      "Определитель:\n",
-      "86\n"
-     ]
-    }
-   ],
-   "source": [
-    "a1 = np.array([[10, -1, 5], [-2, 1, -3], [1, 4, 1]])\n",
-    "print(f'Матрица:\\n{a1}')\n",
-    "print(f'Определитель:\\n{np.linalg.det(a1):.0f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[ 2 10  5]\n",
-      " [ 1 -2 -3]\n",
-      " [ 2  1  1]]\n",
-      "Определитель:\n",
-      "-43\n"
-     ]
-    }
-   ],
-   "source": [
-    "a2 = np.array([[2, 10, 5], [1, -2, -3], [2, 1, 1]])\n",
-    "print(f'Матрица:\\n{a2}')\n",
-    "print(f'Определитель:\\n{np.linalg.det(a2):.0f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Матрица:\n",
-      "[[ 2 -1 10]\n",
-      " [ 1  1 -2]\n",
-      " [ 2  4  1]]\n",
-      "Определитель:\n",
-      "43\n"
-     ]
-    }
-   ],
-   "source": [
-    "a3 = np.array([[2, -1, 10], [1, 1, -2], [2, 4, 1]])\n",
-    "print(f'Матрица:\\n{a3}')\n",
-    "print(f'Определитель:\\n{np.linalg.det(a3):.0f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "__2.__ Найти $L$-матрицу $LU$-разложения для матрицы коэффициентов:\n",
     "\n",
     "   а)$$\\begin{pmatrix}\n",
@@ -651,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Начнем прямой ход метода Гаусса. Для этого домножим первую строку на $2$ и вычтем ее из второго уравнения. При этом запишем в матрицу $L$ на место элемента $l_{21}$ значение $2$. Затем нам нужно вычесть из третьего уравнения первое, домноженное на $3$. Значит, в матрицу $L$ запишем $l_{31}=3$. \n",
+    "Начнем прямой ход метода Гаусса. Для этого домножим первую строку на $2$ и вычтем ее из второго уравнения. При этом запишем в матрицу $L$ на место элемента $l_{21}$ значение $2$. Затем нам нужно вычесть из третьего уравнения первое, домноженное на $3$. Значит, в матрицу $L$ запишем $l_{31}=3$. \n",
     "\n",
     "Матрица коэффициентов будет иметь вид\n",
     "\n",
